--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 
                     <p class="font-bold">Total: <span id="cart-total">0.00</span></p>
 
-                    <p class="font-bold mt-4">endereço de entrega:</p>
+                    <p class="font-bold mt-4">Endereço de entrega:</p>
                     <input 
                         type="text"
                         placeholder="Digite seu endereço completo..."
